objects/Approval_Schedule_Task__c/Approval_Schedule_Task__c.object-meta.xml
<CustomObject>
    <label>Approval Template Step</label>
    <nameField>
        <label>Approval Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approval Template Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>