objects/Approval_Schedule_Task__c/fields/Approval_Schedule_Template__c.field-meta.xml
<CustomField>
    <fullName>Approval_Schedule_Template__c</fullName>
    <label>Approval Schedule Template</label>
    <referenceTo>Approval_Schedule_Template__c</referenceTo>
    <relationshipName>Approval_Schedule_Template_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>