objects/Approval_Schedule_Task__c/fields/Roles__c.field-meta.xml
<CustomField>
    <fullName>Roles__c</fullName>
    <label>Roles</label>
    <length>200</length>
    <type>Text</type>
</CustomField>